# cmpro

./: CMakeLists.txt  README.md  angledata.cpp  aout.txt  cmadd.cpp  cmpro.cpp  detection_procession.cc  detection_procession.h  main_process.cc  shape_processing.cc  shape_processing.h  showing_window.cc  showing_window.h  soundpool.cpp  starter.cc  test1.cc
configure/: configure_readme.md  process_configure.yaml
dataout/: dataout_readme.md
include/cmpro/: common_include.h  configure.h  coordinate_convert.h  deep_process.h  learning_method.h  model.h  rate_method.h  sequence_convert.h  shape_processing.h
recdat/: 10.txt  11.txt  13.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: configure.cpp  coordinate_convert.cpp  deep_process.cpp  learning_method.cpp  model.cpp  model_freeze.cpp  rate_method.cpp  sequence_convert.cpp  shape_processing.cpp
test/: cmpro_dpl.cpp  cmpro_rate.cpp  cmpro_record.cpp  cvmtst.cpp  starter.cc
